syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "AvatarEnterSceneInfo.proto";
import "MPLevelEntityInfo.proto";
import "TeamEnterSceneInfo.proto";

// CmdId: 274
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message PlayerEnterSceneInfoNotify {
	uint32 cur_avatar_entity_id = 8;
	repeated AvatarEnterSceneInfo avatar_enter_info = 14;
	TeamEnterSceneInfo team_enter_info = 9;
	MPLevelEntityInfo mp_level_entity_info = 5;
	uint32 enter_scene_token = 7;
}
